Create A Window for Subtitle

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </head>
 <body>
 <div id="container">
-    <div id="dragbar">Fenster verschieben</div>
+    <div id="dragbar">Verschieben</div>
     <div id="subtitleDisplay">
         <div id="subtitleText">Untertitel werden hier angezeigt</div>
     </div>
